# sas_robot_kinematics

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
.github/workflows/: ros-noetic-build.yml
include/rosilo_robot_kinematics/: rosilo_robot_kinematics_interface.h  rosilo_robot_kinematics_provider.h
include/sas_robot_kinematics/: sas_robot_kinematics_interface.h  sas_robot_kinematics_provider.h
scripts/: sas_robot_kinematics_interface_example.py
src/: rosilo_robot_kinematics_interface.cpp  rosilo_robot_kinematics_provider.cpp  sas_robot_kinematics_interface.cpp  sas_robot_kinematics_provider.cpp  sas_robot_kinematics_py.cpp
src/rosilo_robot_kinematics/: __init__.py  rosilo_robot_kinematics_interface.py  rosilo_robot_kinematics_provider.py
src/sas_robot_kinematics/: __init__.py  sas_robot_kinematics_interface.py  sas_robot_kinematics_provider.py
